--- a/dune
+++ b/dune
@@ -1,6 +1,6 @@
 (executables
   (names producer processor deploy)
   (ocamlopt_flags (-O3))
-  (libraries batteries ocaml-geth huxiang lwt lwt.unix ppx_deriving bin_prot cmdliner dbm sqlite3 hex)
+  (libraries batteries ocaml-geth huxiang lwt lwt_log lwt.unix ppx_deriving bin_prot cmdliner dbm sqlite3 hex)
   (preprocess (pps lwt_ppx ppx_deriving.show ppx_deriving.eq ppx_bin_prot))
 )
